[metadata]
name = tft_torch
version = 0.0.6
author = Dvir Ben Or
author_email = dvirb@playtika.com
description = A Python library that implements ״Temporal Fusion Transformers for Interpretable Multi-horizon Time Series Forecasting״
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/PlaytikaOSS/tft-torch
project_urls =
    Bug Tracker = https://github.com/PlaytikaOSS/tft-torch/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
zip_safe = False
include_package_data = True
setup_requires =
    setuptools>=52.0.0
install_requires =
    omegaconf
    torch>=1.6.0
    numpy
    pandas
    scikit-learn
    matplotlib

[options.extras_require]
develop =
    flake8>=3.9.2
    ipython>=7.23.1
    nbsphinx>=0.8.4
    pandoc>=1.0.2
    pre-commit>=2.12.1
    pytest>=6.2.4
    setuptools>=52.0.0
    sphinx>=4.0.0
    sphinx-rtd-theme>=0.5.2
    wheel>=0.36.2
    build
    recommonmark

[flake8]
max-line-length = 120